# KPictureFrame

./: CMakeLists.txt  Messages.sh  README.md
.github/workflows/: deb.yml  obs-submit.yml
debian/: changelog  control
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: FullRepresentation.qml  configPictures.qml  main.qml
packaging/: KPictureFrame.spec
translate/: kpictureframe.pot
translate/de/: plasma_applet_de.agundur.kpictureframe.po
translate/es/: plasma_applet_de.agundur.kpictureframe.po
translate/fr/: plasma_applet_de.agundur.kpictureframe.po
